swagger updated for in-memory endpoint
